feat: add components from map reduce project